Update to 1.10.0 NIFI Correct options Refactoring