@@ -16,70 +16,53 @@
  */
 package org.apache.nifi.processors.webdav;
 
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.HashMap;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Map;
-import java.util.Map.Entry;
-import java.util.Set;
-
-import org.apache.nifi.annotation.behavior.InputRequirement;
+import com.github.sardine.DavResource;
+import com.github.sardine.Sardine;
+import org.apache.nifi.annotation.behavior.*;
 import org.apache.nifi.annotation.behavior.InputRequirement.Requirement;
-import org.apache.nifi.annotation.behavior.ReadsAttribute;
-import org.apache.nifi.annotation.behavior.ReadsAttributes;
-import org.apache.nifi.annotation.behavior.WritesAttribute;
-import org.apache.nifi.annotation.behavior.WritesAttributes;
 import org.apache.nifi.annotation.documentation.CapabilityDescription;
 import org.apache.nifi.annotation.documentation.SeeAlso;
 import org.apache.nifi.annotation.documentation.Tags;
 import org.apache.nifi.components.PropertyDescriptor;
+import org.apache.nifi.expression.ExpressionLanguageScope;
 import org.apache.nifi.flowfile.FlowFile;
 import org.apache.nifi.processor.ProcessContext;
 import org.apache.nifi.processor.ProcessSession;
+import org.apache.nifi.processor.ProcessorInitializationContext;
 import org.apache.nifi.processor.Relationship;
 import org.apache.nifi.processor.exception.ProcessException;
 import org.apache.nifi.processor.util.StandardValidators;
 
-import com.github.sardine.DavResource;
-import com.github.sardine.Sardine;
+import java.io.IOException;
+import java.util.*;
+import java.util.Map.Entry;
 
-@Tags({ "webdav", "fetch" })
+@Tags({"webdav", "fetch"})
 @CapabilityDescription("Fetches content from a WebDAV resource")
-@SeeAlso({ ListWebDAV.class })
-@ReadsAttributes({ @ReadsAttribute(attribute = "filename", description = "Filename of resource"), @ReadsAttribute(attribute = "path", description = "Path of resource") })
-@WritesAttributes({ @WritesAttribute(attribute = "", description = "") })
+@SeeAlso({ListWebDAV.class})
+@ReadsAttributes({@ReadsAttribute(attribute = "filename", description = "Filename of resource"), @ReadsAttribute(attribute = "path", description = "Path of resource")})
 @InputRequirement(Requirement.INPUT_REQUIRED)
 public class FetchWebDAV extends AbstractWebDAVProcessor {
 
-    private static final PropertyDescriptor GET_ALL_PROPS = new PropertyDescriptor.Builder().name("Get All Properties").description("Whether to fetch all properties for the resource").required(true)
-            .addValidator(StandardValidators.BOOLEAN_VALIDATOR).expressionLanguageSupported(true).build();
+    private static final PropertyDescriptor GET_ALL_PROPS = new PropertyDescriptor.Builder()
+            .name("Get All Properties")
+            .description("Whether to fetch all properties for the resource")
+            .required(true)
+            .addValidator(StandardValidators.BOOLEAN_VALIDATOR)
+            .allowableValues(TRUE_VALUE,FALSE_VALUE)
+            .build();
 
-    private final static List<PropertyDescriptor> properties;
-    private final static Set<Relationship> relationships;
+    private List<PropertyDescriptor> properties;
+    private Set<Relationship> relationships;
 
-    static {
-        final List<PropertyDescriptor> _properties = new ArrayList<>();
-        _properties.add(URL);
-        _properties.add(GET_ALL_PROPS);
+    @Override
+    protected void init(final ProcessorInitializationContext context) {
 
-        _properties.add(SSL_CONTEXT_SERVICE);
-        _properties.add(USERNAME);
-        _properties.add(PASSWORD);
-        _properties.add(NTLM_AUTH);
-        
-        _properties.add(PROXY_HOST);
-        _properties.add(PROXY_PORT);
-        _properties.add(HTTP_PROXY_USERNAME);
-        _properties.add(HTTP_PROXY_PASSWORD);
-        _properties.add(NTLM_PROXY_AUTH);
-        properties = Collections.unmodifiableList(_properties);
+        properties = List.of(URL, GET_ALL_PROPS, SSL_CONTEXT_SERVICE, USERNAME, PASSWORD, NTLM_AUTH,
+                PROXY_CONFIGURATION_SERVICE, PROXY_HOST, PROXY_PORT, HTTP_PROXY_USERNAME, HTTP_PROXY_PASSWORD,
+                NTLM_PROXY_AUTH);
 
-        final Set<Relationship> _relationships = new HashSet<>();
-        _relationships.add(RELATIONSHIP_SUCCESS);
-        _relationships.add(RELATIONSHIP_FAILURE);
-        relationships = Collections.unmodifiableSet(_relationships);
+        relationships = Set.of(REL_SUCCESS, REL_FAILURE);
     }
 
     @Override
@@ -99,34 +82,36 @@ public class FetchWebDAV extends AbstractWebDAVProcessor {
             return;
         }
         boolean getAllProperties = context.getProperty(GET_ALL_PROPS).evaluateAttributeExpressions(flowFile).asBoolean();
-
         try {
             try {
-                String url = flowFile.getAttribute("path");
+                String url = context.getProperty(URL).evaluateAttributeExpressions(flowFile).getValue();
                 addAuth(context, url);
-
-                Sardine sardine = buildSardine(context);
-
+                Sardine sardine = buildSardine();
                 // get all the properties
                 if (getAllProperties) {
-                    DavResource resource = sardine.list(url, 0, true).get(0);
-                    Map<String, String> customProps = resource.getCustomProps();
-                    Map<String, String> attributes = new HashMap<String, String>(customProps.size());
-                    for (Entry<String, String> entry : customProps.entrySet()) {
-                        attributes.put("dav." + entry.getKey(), entry.getValue());
-                    }
-                    flowFile = session.putAllAttributes(flowFile, attributes);
+                    flowFile = session.putAllAttributes(flowFile, getProperties(sardine,url));
                 }
                 flowFile = session.importFrom(sardine.get(url), flowFile);
-                session.transfer(flowFile, RELATIONSHIP_SUCCESS);
+                session.transfer(flowFile, REL_SUCCESS);
             } catch (Exception e1) {
-                getLogger().error("Error processing FlowFile", e1);
                 flowFile = session.penalize(flowFile);
-                session.transfer(flowFile, RELATIONSHIP_FAILURE);
+                session.transfer(flowFile, REL_FAILURE);
+                getLogger().error("Error processing FlowFile", e1);
             }
         } catch (Exception e) {
-            getLogger().error("Error building Sardine client", e);
             context.yield();
+            throw new ProcessException("Error building Sardine client",e);
+
         }
+    }
+
+    private Map<String,String> getProperties(Sardine sardine,String url) throws IOException {
+        DavResource resource = sardine.list(url, 0, true).get(0);
+        Map<String, String> customProps = resource.getCustomProps();
+        Map<String, String> attributes = new HashMap<>(customProps.size());
+        for (Entry<String, String> entry : customProps.entrySet()) {
+            attributes.put("dav." + entry.getKey(), entry.getValue());
+        }
+        return attributes;
     }
 }
